--- a/dockerfiles/build-containers/maven/jdk-8/Dockerfile
+++ b/dockerfiles/build-containers/maven/jdk-8/Dockerfile
@@ -1,4 +1,4 @@
 FROM webtree/build-images:base-maven as source
 
 FROM maven:3.6.0-jdk-8-alpine
-COPY --from source /repo /root/.m2/repository/
+COPY --from=source /repo /root/.m2/repository/
