--- a/dockerfiles/build-containers/maven/base/Dockerfile
+++ b/dockerfiles/build-containers/maven/base/Dockerfile
@@ -1,17 +1,25 @@
-#builder
-FROM maven:alpine as builder
+#builders
+FROM maven:3-jdk-8-alpine as builder-jdk8
 RUN apk update && \
     apk add git
 
+RUN git clone https://github.com/Web-tree/trust.git && \
+    cd trust/back && mvn install -DskipTests && \
+    cd ../../
+RUN git clone https://github.com/Web-tree/auth && \
+    cd auth && mvn package -DskipTests
+#RUN git clone https://github.com/Web-tree/mydata && \
+#    cd ../../mydata/api && mvn package -DskipTests
+RUN mv ~/.m2/repository /repo
+
+FROM maven:3-jdk-11-slim as builder-jdk11
+RUN apt update && \
+    apt install -y git
+
 RUN git clone https://github.com/Web-tree/mystuff.git && \
-    git clone https://github.com/Web-tree/trust.git && \
-    git clone https://github.com/Web-tree/mydata && \
-    git clone https://github.com/Web-tree/auth && \
-    cd mystuff/back && mvn dependency:resolve && \
-    cd ../../trust/back && mvn install && \
-    cd ../../mydata/back && mvn dependency:resolve && \
-    cd ../../auth/back && mvn dependency:resolve && \
+    cd mystuff/back && mvn package -DskipTests && \
     mv ~/.m2/repository /repo
 
 FROM alpine
-COPY --from=builder /repo /repo
+COPY --from=builder-jdk8 /repo /repo
+COPY --from=builder-jdk11 /repo /repo
